--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3333/transacaodb?serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Pa55w0rd}
+spring.datasource.initialization-mode=always
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.show_sql = false
+spring.jpa.properties.hibernate.format_sql = true
+
+#KAFKA
+spring.kafka.bootstrap.-servers=${KAFKA_HOST:localhost:9092}
+
+#KAFKA CONSUMER
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.group-id=${KAFKA_CONSUMER_GROUP_ID:transacao}
+#spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO_OFFSET_RESET:latest}
+#spring.kafka.topics.transactions=transacoes
