--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.kafka.bootstrap.-servers=${KAFKA_HOST:localhost:9092}
 spring.kafka.consumer.group-id=${KAFKA_CONSUMER_GROUP_ID:transacao}
 #spring.kafka.consumer.auto-offset-reset=${KAFKA_AUTO_OFFSET_RESET:latest}
 #spring.kafka.topics.transactions=transacoes
+
+#KEYCLOAK
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/transacao}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/transacao/protocol/openid-connect/certs}
